更新快递收寄逻辑以及设置界面的添加

--- a/app/src/main/res/layout/activity_school.xml
+++ b/app/src/main/res/layout/activity_school.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="right"
-            android:textColor="@color/sc_text"
+            android:textColor="@color/title"
             android:textSize="20sp"
             android:layout_margin="20dp"
             android:text="取件"/>
