--- a/app/src/main/res/layout/fragment_take_package.xml
+++ b/app/src/main/res/layout/fragment_take_package.xml
@@ -10,15 +10,16 @@
         android:padding="@dimen/sendRPadding">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:text="姓名"/>
 
         <EditText
-            android:id="@+id/track_number"
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/input_shape"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
 
@@ -30,37 +31,17 @@
         android:padding="@dimen/sendRPadding">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:textSize="@dimen/sendRequire"
             android:textColor="@color/black"
             android:text="手机"/>
 
         <EditText
-            android:id="@+id/express_company"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textCursorDrawable="@drawable/edit_cursor_color"
-            android:textSize="@dimen/sendRequire"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/sendRPadding">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sendRequire"
-            android:textColor="@color/black"
-            android:text="快递公司："/>
-
-        <EditText
             android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/input_shape"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
 
@@ -72,16 +53,18 @@
         android:padding="@dimen/sendRPadding">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:textSize="@dimen/sendRequire"
             android:textColor="@color/black"
-            android:text="快递单号"/>
+            android:text="快递公司  "/>
 
         <EditText
-            android:id="@+id/address"
+            android:id="@+id/express_company"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/input_shape"
+
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
 
@@ -93,16 +76,39 @@
         android:padding="@dimen/sendRPadding">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sendRequire"
+            android:textColor="@color/black"
+            android:text="快递单号  "/>
+
+        <EditText
+            android:id="@+id/track_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/input_shape"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
+            android:textSize="@dimen/sendRequire"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/sendRPadding">
+
+        <TextView
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:textSize="@dimen/sendRequire"
             android:textColor="@color/black"
             android:text="地址"/>
 
         <EditText
-            android:id="@+id/sms"
+            android:id="@+id/address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/input_shape"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
     </LinearLayout>
@@ -113,35 +119,37 @@
         android:padding="@dimen/sendRPadding">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/sendRequire"
-            android:textColor="@color/black"
-            android:text="状态"/>
-
-        <EditText
-            android:id="@+id/remark"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"
             android:textColor="@color/black"
             android:text="送达时间"/>
+
+        <EditText
+            android:id="@+id/time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/input_shape"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
+            android:textSize="@dimen/sendRequire"
+            android:textColor="@color/black"
+            />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:gravity="center"
+        android:gravity="bottom"
+        android:layout_weight="1"
         android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/commit"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="2dp"
-            android:textSize="16sp"
+            android:textSize="20sp"
             android:gravity="center"
-            android:background="@drawable/button_shape"
+            android:background="@color/title"
             android:textColor="@color/colorGrey"
             android:text="提 交"/>
     </LinearLayout>
