--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -39,6 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="通知"
+            android:textColor="@color/black"
             android:textSize="15dp"
             android:layout_margin="10dp"/>
 
@@ -55,6 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="定位"
+            android:textColor="@color/black"
             android:textSize="15dp"
             android:layout_margin="10dp"/>
 
@@ -69,6 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="手机"
+            android:textColor="@color/black"
             android:textSize="15dp"
             android:layout_margin="10dp"/>
 
@@ -83,6 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="清理"
+            android:textColor="@color/black"
             android:textSize="15dp"
             android:layout_margin="10dp"/>
 
