--- a/app/src/main/res/layout/activity_yunfei.xml
+++ b/app/src/main/res/layout/activity_yunfei.xml
@@ -26,12 +26,6 @@
             android:src="@mipmap/back_white" />
     </RelativeLayout>
 
-    <WebView
-        android:id="@+id/webView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </WebView>
-
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="match_parent"
@@ -39,6 +33,14 @@
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:max="100"
         android:progress="0"
+        android:progressDrawable="@drawable/progress"
         android:visibility="gone"/>
+
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </WebView>
+
 
 </LinearLayout>
