--- a/app/src/main/res/layout/activity_complete.xml
+++ b/app/src/main/res/layout/activity_complete.xml
@@ -26,10 +26,19 @@
             android:src="@mipmap/back_white" />
     </RelativeLayout>
 
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <ListView
         android:id="@+id/lv_complete_delivery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
+
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
