swipeRefreshLayout 实现下拉刷新

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="@color/white_bg"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -15,10 +16,9 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:src="@drawable/ic_launcher_background" />
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@mipmap/logo3" />
 
             <EditText
                 android:id="@+id/et_phone_number"
@@ -26,6 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/input_shape2"
                 android:hint="@string/username_hint"
                 android:textCursorDrawable="@drawable/edit_cursor_color" />
