--- a/app/src/main/res/layout/fragment_all_order.xml
+++ b/app/src/main/res/layout/fragment_all_order.xml
@@ -3,6 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <ListView
             android:id="@+id/list_all_order"
             android:layout_width="match_parent"
@@ -10,5 +15,7 @@
             android:dividerHeight="5dp">
 
         </ListView>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
