--- a/app/src/main/res/layout/activity_ad.xml
+++ b/app/src/main/res/layout/activity_ad.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scaleType="fitXY"
-    android:background="@mipmap/ic_launcher">
+    android:background="@mipmap/init">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,6 +20,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="5dp"
             android:gravity="center"
+            android:textColor="@color/black"
             android:textSize="10dp"
             />
     </RelativeLayout>
