--- a/app/src/main/res/layout/activity_direction.xml
+++ b/app/src/main/res/layout/activity_direction.xml
@@ -118,7 +118,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:layout_gravity="center"
+        android:padding="5dp"
+        android:gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
@@ -126,14 +128,12 @@
             android:textSize="16sp"
             android:layout_marginLeft="20dp"
             android:textColor="@color/black"
-            android:layout_marginTop="10dp"
             android:text="详细地址:"/>
 
         <EditText
             android:id="@+id/et_detail_address"
             android:layout_width="0dp"
             android:background="@null"
-            android:layout_marginTop="10dp"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:layout_height="wrap_content"
             android:layout_weight="2"/>
@@ -142,13 +142,16 @@
             android:id="@+id/img_get_location"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:layout_gravity="center"
+            android:src="@mipmap/location"/>
     </LinearLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:background="#ebebeb"
         android:layout_marginTop="9dp"
         android:layout_height="1dp" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -160,7 +163,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/checkbox_shape"
             android:layout_alignParentLeft="true" />
         <TextView
             android:layout_width="wrap_content"
@@ -177,7 +179,6 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toStartOf="@id/tv_direction"
-            android:background="@drawable/checkbox_shape"
             android:layout_toLeftOf="@id/tv_direction" />
 
         <TextView
