--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="-10dp"
                 android:textSize="10sp"
-                android:text="寄快递" />
+                android:text="在线寄" />
         </LinearLayout>
 
         <LinearLayout
