--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:background="@color/white_bg"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -29,16 +31,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:padding="10dp"
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/et_register_phone_num"
+            android:id="@+id/et_phonenum"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:layout_marginTop="10dp"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:background="@drawable/input_shape"
             android:hint="输入手机号" />
@@ -51,25 +52,24 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/et_register_identifying_code"
+            android:id="@+id/et_checkecode"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="10dp"
             android:background="@drawable/input_shape"
             android:layout_weight="2"
-            android:layout_marginTop="10dp"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:layout_marginLeft="40dp"
             android:hint="验证码" />
 
         <Button
-            android:id="@+id/btn__register_get_code"
+            android:id="@+id/btn_check"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:background="@drawable/input_shape"
-            android:layout_marginTop="10dp"
             android:layout_marginRight="40dp"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:text="获取验证码"/>
 
     </LinearLayout>
@@ -124,15 +124,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:gravity="center"
+        android:padding="10dp"
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/btn_register_confirm"
+            android:id="@+id/btn_sure"
             android:layout_width="150dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="5dp"
             android:background="@drawable/button_shape"
             android:textColor="@color/colorGrey"
             android:text="确 认"
