--- a/app/src/main/res/layout/activity_sender_address.xml
+++ b/app/src/main/res/layout/activity_sender_address.xml
@@ -35,7 +35,7 @@
         >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:layout_marginTop="10dp"
@@ -64,7 +64,7 @@
         >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:layout_marginTop="10dp"
@@ -92,7 +92,7 @@
         >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:layout_marginLeft="20dp"
@@ -117,22 +117,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:padding="5dp"
        >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:layout_marginLeft="20dp"
             android:textColor="@color/black"
-            android:layout_marginTop="10dp"
             android:text="详细地址:"/>
 
         <EditText
             android:id="@+id/et_detail_address"
             android:layout_width="0dp"
             android:background="@null"
-            android:layout_marginTop="10dp"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:layout_height="wrap_content"
             android:layout_weight="2"/>
@@ -141,7 +142,8 @@
             android:id="@+id/img_get_location"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/location"/>
+
     </LinearLayout>
     <TextView
         android:layout_width="match_parent"
@@ -196,10 +198,10 @@
             android:id="@+id/btn_commit"
             android:layout_width="150dp"
             android:layout_height="50dp"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:background="@drawable/button_shape"
             android:textColor="@color/colorGrey"
-            android:text="保存" />
+            android:text="保  存" />
     </LinearLayout>
 
 </LinearLayout>
