--- a/app/src/main/res/layout/fragment_myself.xml
+++ b/app/src/main/res/layout/fragment_myself.xml
@@ -9,22 +9,17 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="20dp"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:background="@color/colorGrey">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@mipmap/ic_launcher" />
+            android:id="@+id/headImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@mipmap/logo3" />
 
-        <TextView
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="一二三"
-            android:textSize="25dp"
-            android:gravity="center"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp" />
     </LinearLayout>
 
     <ScrollView
