--- a/app/src/main/res/layout/fragment_order_send.xml
+++ b/app/src/main/res/layout/fragment_order_send.xml
@@ -392,6 +392,7 @@
             android:gravity="center"
             android:background="@color/title"
             android:textSize="20sp"
+            android:textColor="@color/white_bg"
             android:text="提 交"/>
     </LinearLayout>
 
