--- a/app/src/main/res/layout/activity_write_user_info.xml
+++ b/app/src/main/res/layout/activity_write_user_info.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white_bg"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -34,23 +35,34 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp"
-            android:src="@mipmap/ic_launcher" />
+            android:id="@+id/headImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@mipmap/logo3" />
     </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#111"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
+        android:padding="10dp"
         android:layout_weight="1"
         android:orientation="horizontal">
         <TextView
@@ -75,8 +87,9 @@
         android:background="#111111"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:padding="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="match_parent"
@@ -100,8 +113,9 @@
         android:background="#111"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:padding="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="match_parent"
@@ -161,8 +175,9 @@
         android:background="#111"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:padding="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
@@ -186,8 +201,9 @@
         android:background="#111"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:padding="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
@@ -211,8 +227,9 @@
         android:background="#111"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:padding="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="match_parent"
@@ -221,6 +238,7 @@
             android:textSize="20dp"
             android:layout_weight="4.1"
             android:text="省市区:"/>
+
         <EditText
             android:id="@+id/et_info_province"
             android:layout_width="match_parent"
@@ -230,6 +248,7 @@
             android:textCursorDrawable="@drawable/edit_cursor_color"
 
             android:hint="请输入你的省市区" />
+
         <ImageView
             android:id="@+id/img_get_location"
             android:layout_width="50dp"
@@ -243,8 +262,9 @@
         android:background="#111"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:padding="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
@@ -268,7 +288,7 @@
         android:background="#111"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="5dp"
         android:layout_weight="1">
 
@@ -284,5 +304,9 @@
             android:textColor="@color/colorGrey"
             android:textSize="24dp" />
     </LinearLayout>
+
+    </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
