--- a/app/src/main/res/layout/fragment_take_package.xml
+++ b/app/src/main/res/layout/fragment_take_package.xml
@@ -34,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/input_shape"
+            android:textColor="#111111"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
 
@@ -56,6 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/input_shape"
+            android:textColor="#111111"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
 
@@ -78,7 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/input_shape"
-
+            android:textColor="#111111"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
 
@@ -101,6 +103,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/input_shape"
+            android:textColor="#111111"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
 
@@ -125,7 +128,7 @@
             android:background="@drawable/input_shape"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"
-            android:textColor="@color/black"
+            android:textColor="#111111"
             />
     </LinearLayout>
 
@@ -146,6 +149,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/input_shape"
+            android:textColor="#111111"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
     </LinearLayout>
@@ -169,7 +173,7 @@
             android:background="@drawable/input_shape"
             android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"
-            android:textColor="@color/black"
+            android:textColor="#111111"
             />
     </LinearLayout>
 
