--- a/app/src/main/res/layout/wejm3.xml
+++ b/app/src/main/res/layout/wejm3.xml
@@ -15,6 +15,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher_background" />
+            android:src="@mipmap/wel3" />
     </LinearLayout>
 </RelativeLayout>
